supporting webpack in dev

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -6,3 +6,6 @@ Date: <%= @page.created_at %>
 <p>
   Tags: <%= @page.tags %>
 </p>
+
+<div id="pages-show"></div>
+<%= javascript_include_tag "views/pagesShow" %>
