--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,3 +5,6 @@
     <%= link_to("#{page.created_at} #{page.title}", page_path(page)) %> <%= link_to("Delete", page_path(page), method: :delete) %><br>
   <% end %>
 </p>
+
+<div id="pages-index"></div>
+<%= javascript_include_tag "views/pagesIndex" %>
